--- a/saludo.html
+++ b/saludo.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="css/main1.css">
+    <link rel="stylesheet" href="css/saludo.css">
     <title>JqueryJojojo</title>
 </head>
 
@@ -24,7 +24,7 @@
     </main>
     <script src="vendors/jquery/jquery-3.2.1.min.js"></script>
     <!-- <script src="js/register.js"></script> -->
-    <script src="js/app1.js"></script>
+    <script src="js/saludo.js"></script>
 </body>
 
 </html>
